--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "lint": "prettier --check \"src/**/*.ts\" \"test/**/*.ts\"; eslint \"{src,apps,libs,test}/**/*.ts\"",
-    "lint-fix": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"; eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "lint": "prettier --check \"src/**/*.ts\" \"test/**/*.ts\" && eslint \"{src,apps,libs,test}/**/*.ts\"",
+    "lint-fix": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\" && eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
