Consider spec files as tests

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,4 +6,6 @@ sonar.sources=src
 sonar.tests=test
 sonar.sourceEncoding=UTF-8
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
-sonar.coverage.exclusions=**/*.spec.ts
+sonar.coverage.exclusions=src/**/*.spec.ts
+sonar.test.inclusions=src/**/*.spec.test
+sonar.exclusions=src/**/*.spec.ts
