--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,5 +7,5 @@ sonar.tests=test
 sonar.sourceEncoding=UTF-8
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 sonar.coverage.exclusions=src/**/*.spec.ts
-sonar.test.inclusions=src/**/*.spec.test
+sonar.test.inclusions=src/**/*.spec.ts
 sonar.exclusions=src/**/*.spec.ts
